--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@writetome51/array-insert-at",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Function that inserts new items at a specified index in the array",
-  "main": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
