--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/writetome51/array-insert-at.git"
+  },
+  "bugs": {
+    "url": "https://github.com/writetome51/array-insert-at/issues"
+  },
+  "homepage": "https://github.com/writetome51/array-insert-at#readme",
   "keywords": [
     "array",
     "modify",
