--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "license": "MIT",
   "devDependencies": {},
   "dependencies": {
-    "error-if-values-are-not-arrays": "latest",
-    "@writetome51/array-and-index-validation": "latest"
+    "error-if-values-are-not-arrays": "1.0.0",
+    "@writetome51/array-and-index-validation": "1.0.2"
   }
 }
