Added tildes to dependency versions in package.json. Incremented version to 1.0.2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@writetome51/array-insert-at",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Function that inserts new items at a specified index in the array",
   "main": "index.js",
   "scripts": {
@@ -26,7 +26,7 @@
   "license": "MIT",
   "devDependencies": {},
   "dependencies": {
-    "error-if-values-are-not-arrays": "1.0.0",
-    "@writetome51/array-and-index-validation": "1.0.2"
+    "error-if-values-are-not-arrays": "~1.0.0",
+    "@writetome51/array-and-index-validation": "~1.0.2"
   }
 }
