Updated dependencies. Upped version to 2.0.3

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@writetome51/array-insert-at",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "Function that inserts new items at a specified index in the array",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -27,7 +27,7 @@
   "license": "MIT",
   "devDependencies": {},
   "dependencies": {
-    "error-if-values-are-not-arrays": "~1.0.2",
-    "@writetome51/array-and-index-validation": "~1.0.6"
+    "error-if-values-are-not-arrays": "~1.0.3",
+    "error-if-index-not-valid": "~1.0.0"
   }
 }
