--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@writetome51/array-insert-at",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "Function that inserts new items at a specified index in the array",
   "type": "module",
   "main": "dist/index.js",
@@ -30,7 +30,7 @@
   "license": "MIT",
   "devDependencies": {},
   "dependencies": {
-    "error-if-not-array": "^2.0.0",
-    "error-if-index-not-valid": "^2.0.0"
+    "error-if-index-not-valid": "^2.0.0",
+    "error-if-not-array": "^2.0.0"
   }
 }
